--- a/greetings.html
+++ b/greetings.html
@@ -52,6 +52,6 @@ body{
         greet = 'Good Evening  ';
 
     document.getElementById('lbl').innerHTML =
-        greet+="Hello Javed"+`<div id="date"> It's ${date}</div>`;
+        greet+="Javed"+`<div id="date"> It's ${date}</div>`;
 </script> 
 </html>
